# dbotpy

./: .gitignore  README.md  bot.py  censor.py  data.py  help_command.py  leaderboard.db-journal  logger.py  main.py  pyproject.toml  req-optimized.txt  requirements.txt  stuff.py  test_0001.py
cogs/: calculator.py  converters.py  management.py  silly.py  tts.py
conf/: logging.json
markov-texts/: 1.txt  planedef.txt
others/: calazh.py  censored_words.profanity  markov.py  sur.py  test_0001.py
