[project]
name = "dbotpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "aioconsole>=0.8.1",
    "discord-py>=2.6.3",
    "distro>=1.9.0",
    "gtts>=2.5.4",
    "markovify>=0.9.4",
    "matplotlib>=3.10.6",
    "ollama>=0.5.4",
    "profanityfilter>=2.1.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "spacy>=3.8.7",
]
